[tool.poetry]
name = "pizza-delivery-api"
version = "0.1.0"
description = ""
authors = ["uneku"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
sqlalchemy = "^2.0.25"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
